v410-zishao-link-cn-to-en-1

--- a/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -63,7 +63,7 @@ import jaydebeapi
 def ob_test():   
     url = 'jdbc:oceanbase://host:port'
     user = 's**@oracle'
-    password = '**1***'
+    password = '******'
     driver = 'com.alipay.oceanbase.jdbc.Driver'
     jarFile = './oceanbase-client-2.4.0.jar'
 
