--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
@@ -47,13 +47,13 @@ Before you connect to OceanBase Database by using the mysql client, make sure th
       Example:
 
       ```sql
-      $mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       or
 
       ```sql
-      $mysql -h10.10.10.1 -uobdemo:obmysql:****** -P2883 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -uobdemo:obmysql:****** -P2883 -p****** -c -A oceanbase
       ```
 
    * To directly connect to the MySQL tenant, run the following command:
@@ -83,7 +83,7 @@ Before you connect to OceanBase Database by using the mysql client, make sure th
       Example:
 
       ```sql
-      $mysql -h10.10.10.1 -u******@obmysql -P2881 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -u******@obmysql -P2881 -p****** -c -A oceanbase
       ```
 
 3. After the connection is established, the following command-line prompt is displayed by default: 
