--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -45,13 +45,13 @@ This topic describes how to connect to a MySQL tenant of OceanBase Database by u
       Example:
 
       ```sql
-      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       or
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p****** -c -A oceanbase
       ```
 
    * To directly connect to the MySQL tenant, run the following command:
@@ -81,7 +81,7 @@ This topic describes how to connect to a MySQL tenant of OceanBase Database by u
       Example:
 
       ```sql
-      obclient -h10.10.10.1 -u******@obtenant -P2881 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u******@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
 3. After the connection is established, the following command-line prompt is displayed by default: 
@@ -97,7 +97,7 @@ This topic describes how to connect to a MySQL tenant of OceanBase Database by u
 Connect to a MySQL tenant of OceanBase Database by using OBClient 
 
 ```sql
-$obclient -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p**1*** -c -A sys
+$obclient -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p****** -c -A sys
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221684181
 Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
