--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -30,20 +30,20 @@ Complete the following BIOS settings according to the operating system you selec
 **Special settings**
 
 * For Intel-based operating systems, disable non-uniform memory access (NUMA).
-  Additionally, we recommend that you run the following commands to set the `vm.swapness` parameter in the `/etc/sysctl.conf` configuration file to `0`.
+  Additionally, we recommend that you run the following commands to set the `vm.swappiness` parameter in the `/etc/sysctl.conf` configuration file to `0`.
 
    >
    > ```bash
    > [root@xxx /]
    > $vi /etc/sysctl.conf
-   > vm.swapness = 0
+   > vm.swappiness = 0
    >
    > [root@xxx /]
    > $sysctl -p    #Use the values configured in the sysctl.conf configuration file.
    > ```
 
 * For Hygon, AMD, Kunpeng, and AArch64 operating systems, enbale NUMA.
-  Additionally, we recommend that you run the following commands to set the `kernel.numa_balancing`, `vm.zone_reclaim_mode`, and `vm.swapness` parameters in the `/etc/sysctl.conf` configuration file to `0` for AArch64 and Hygon environments.
+  Additionally, we recommend that you run the following commands to set the `kernel.numa_balancing`, `vm.zone_reclaim_mode`, and `vm.swappiness` parameters in the `/etc/sysctl.conf` configuration file to `0` for AArch64 and Hygon environments.
 
    >
    > ```bash
@@ -51,7 +51,7 @@ Complete the following BIOS settings according to the operating system you selec
    > $vi /etc/sysctl.conf
    > kernel.numa_balancing = 0
    > vm.zone_reclaim_mode = 0
-   > vm.swapness = 0
+   > vm.swappiness = 0
    >
    > [root@xxx /]
    > $sysctl -p    #Use the values configured in the sysctl.conf configuration file.
