--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/3.configure-clock-source-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/3.configure-clock-source-graphical.md
@@ -79,7 +79,7 @@ Perform the following steps to configure the NTP clock source.
 
 ```shell
 [root@xxx /]# ntpstat
-[root@xxx /]# ntpq
+[root@xxx /]# ntpq -p
 remote          refid       st  t  when  poll reach delay offset jitter
 ========================================================================
 LOCAL(0)        .LOCL.      10  l  589   64   0     0.000 0.000  0.000
