--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
@@ -4,6 +4,10 @@ This topic describes how to configure the Network Time Protocol (NTP) clock sour
 
 However, if you plan to deploy a distributed OceanBase cluster, ensure that the time on each server in the cluster is synchronized. Otherwise, the cluster does not start, and services may encounter exceptions during operation. The OceanBase cluster only allows a maximum clock deviation of 2 seconds. If the deviation is exceeded, the cluster may become leaderless. To restore it to normal, you will need to restore clock synchronization and restart the OceanBase cluster.
 
+<main id="notice" type='explain'>
+   <h4>Note</h4>
+   <p>Starting from version 4.1.0, OceanBase Database supports dynamic modification of clocks without affecting data accuracy and stable cluster operation.</p>
+</main>
 
 ## Prerequisites
 
@@ -43,7 +47,7 @@ Perform the following steps to configure the NTP clock source.
       Add the following content to the configuration file:
 
       ```bash
-      server <yout_ntp_server_ip>
+      server <your_ntp_server_ip>
       ```
 
       Save and close the file.
@@ -98,7 +102,7 @@ Perform the following steps to configure the NTP clock source.
       Add the following content to the configuration file:
 
       ```bash
-      server <yout_ntp_server_ip>
+      server <your_ntp_server_ip>
       ```
 
    5. Run the following command to start the NTP service:
