--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -32,7 +32,7 @@ This topic describes how to deploy OceanBase Database via OBD in a production en
 
 Before you connect to OceanBase Database, make sure that the following prerequisites are satisfied:
 
-* Your server meets the software and hardware requirements. For more information, see [Software and hardware requirements](../2.local-deployment/1.requirements-for-software-and-hardware.md).
+* Your server meets the software and hardware requirements. For more information, see [Software and hardware requirements](1.requirements-for-software-and-hardware.md).
 
 * In the production environment, you must check the environment and configurations. For more information, see [Configuration before deployment](2.environment-and-configuration-checks/1.view-resources-optional.md).
 
