--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
@@ -180,7 +180,7 @@ $tree ~/output/dbcat-20xx-xx-xx-164533/
 
 ## Import the data to the OceanBase database
 
-The file of data exported by using DBCAT is an SQL file. Here you can use the import function of OceanBase Developer Center (ODC) to import the schemas to the OceanBase database. For more information, see [Batch export and import](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033324). 
+The file of data exported by using DBCAT is an SQL file. Here you can use the import function of OceanBase Developer Center (ODC) to import the schemas to the OceanBase database. For more information, see [Batch export and import](https://en.oceanbase.com/docs/community-odc-en-10000000000842077). 
 
 To import the schemas to a MySQL tenant of OceanBase Database, run the source command as follows:
 
