--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/4.use-cloudcanal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/4.use-cloudcanal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -60,7 +60,7 @@ You have installed and deployed CloudCanal Community Edition and obtained and ac
          OceanBase data source settings:
 
          * Network Address: the IP address for connecting to the OceanBase database directly or by using OceanBase Database Proxy (ODP).
-         * oblogproxy host: the IP address of oblogproxy. This parameter is required when an OceanBase database serves as the source database for incremental synchronization. It is optional when an OceanBase database serves as the destination database. <!--For more information about oblogproxy, see [oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html).-->
+         * oblogproxy host: the IP address of oblogproxy. This parameter is required when an OceanBase database serves as the source database for incremental synchronization. It is optional when an OceanBase database serves as the destination database.
          * OceanBaseRpcPort: the RPC port of the OceanBase database. Default value: 2882.
          * Authentication Method: the authentication method. Valid values: **Account and Password**, **Account without Password**, and **No Account and Password**. Default value: Account and Password.
          * Account: the username for logging on to the OceanBase database. If you directly connect to the OceanBase database, the username is in the **Username@Tenant name** format. If you connect to the OceanBase database using ODP, the username is in the **Username@Tenant name#Cluster name** format.
