--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -28,7 +28,9 @@ Components:
 
 ### Step 1: Install oblogproxy
 
-Install and deploy oblogproxy. For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126).
+Install and deploy oblogproxy. 
+
+<!-- For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126). -->
 
 ### Step 2: Install the Canal server
 
