--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -30,7 +30,8 @@ oblogproxy is a proxy service for managing incremental logs of OceanBase Databas
    Query OK, 0 rows affected
    ```
 
-2. Install and deploy oblogproxy. For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126). 
+2. Install and deploy oblogproxy. 
+   <!-- For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126).  -->
 
 ### Configure the Flink environment
 
