--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -33,7 +33,8 @@ Migrate data from the `test_tbl1` table in OceanBase Database to the `tbl1` tabl
 ## Prerequisites
 
 * You have installed JDK 1.8 and configured the `JAVA_HOME` environment variable.
-* You have installed and deployed oblogproxy. For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126).
+* You have installed and deployed oblogproxy. 
+  <!-- For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001042126). -->
 
 ## Procedure
 
