--- a/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
+++ b/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
@@ -180,7 +180,7 @@ $tree ~/output/dbcat-20xx-xx-xx-164533/
 
 ## Import table schemas to OceanBase Database
 
-DBCAT exports SQL files. You can use the import feature of OceanBase Developer Center (ODC) to import table schemas to OceanBase Database in batches. For more information, see [Batch export and import](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033324). 
+DBCAT exports SQL files. You can use the import feature of OceanBase Developer Center (ODC) to import table schemas to OceanBase Database in batches. For more information, see [Batch export and import](https://en.oceanbase.com/docs/community-odc-en-10000000000842077). 
 
 To import table schemas to a MySQL tenant of OceanBase Database, you can also use the `source` command. For example:
 
