--- a/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
+++ b/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
@@ -8,7 +8,8 @@ This topic describes how to use the command-line interface, OBLOADER, and ODC to
 
 The SQL file to be imported to OceanBase Database must comply with the syntax requirements of OceanBase Database.
 
-For more information about the SQL syntax requirements of OceanBase Database, see [SQL syntax (MySQL mode)](../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/1.general-syntax-of-mysql-mode.md)<!--  and [SQL syntax (Oracle mode)](../7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/1.sql-introduction/1.sql-overview.md) -->.
+For more information about the SQL syntax requirements of OceanBase Database, see [SQL syntax (MySQL mode)](../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/1.general-syntax-of-mysql-mode.md).
+<!--  and [SQL syntax (Oracle mode)](../7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/1.sql-introduction/1.sql-overview.md) -->
 
 SQL file information in this example:
 
@@ -103,11 +104,11 @@ The following section describes how to use web ODC to import data.
 
 1. Prepare the ODC environment.
 
-   Both **web ODC** and **client ODC** are available. For more information, see [Deployment Guide for web ODC](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001031868) and [Install ODC in User Guide (Client ODC)](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001031844).
+   Both **web ODC** and **client ODC** are available. For more information, see [Deployment Guide for web ODC](https://en.oceanbase.com/docs/community-odc-en-10000000000841964) and [Install ODC in User Guide (Client ODC)](https://en.oceanbase.com/docs/community-odc-en-10000000000841930).
 
 2. Connect to OceanBase Database.
 
-   For more information about how to connect to OceanBase Database, see [Create a private connection](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033246).
+   For more information about how to connect to OceanBase Database, see [Create a private connection](https://en.oceanbase.com/docs/community-odc-en-10000000000841919).
 
    <!-- ![Connect to OceanBase Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/%E6%96%B0%E5%BB%BA%E4%B8%AA%E4%BA%BA%E8%BF%9E%E6%8E%A5.png) -->
 
@@ -147,7 +148,7 @@ The following section describes how to use web ODC to import data.
 
 6. View the import task.
 
-   After the task is generated, the **Task Center** page automatically appears, where you can view the task information. For more information, see [Import tasks](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033258).
+   After the task is generated, the **Task Center** page automatically appears, where you can view the task information. For more information, see [Import tasks](https://en.oceanbase.com/docs/community-odc-en-10000000000841955).
 
    <!-- ![View tasks](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/5%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A1.png) -->
 
@@ -157,7 +158,7 @@ The following section describes how to use web ODC to import data.
 
 1. Set the SQL file.
 
-2. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971197) and [Download tools](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971198).
+2. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860103) and [Download tools](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860104).
 
 3. Import data.
 
@@ -171,7 +172,7 @@ The following section describes how to use web ODC to import data.
     <p>When you use the host address and port number of a physical node to import data, you do not need to specify the <code>-c</code> option. </p>
    </main>
 
-    For more information about the command-line options of OBLOADER, see [Command-line options](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971199).
+    For more information about the command-line options of OBLOADER, see [Command-line options](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860098).
 
 ### Example of importing SQL data files
 
@@ -214,7 +215,7 @@ Sample statement:
    CREATE TABLE IF NOT EXISTS test_tbl1(col1 INT,col2 VARCHAR(50),PRIMARY KEY (col1));
    ```
 
-2. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971197) and [Download tools](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971198).
+2. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860103) and [Download tools](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860104).
 
 3. Import the table schema.
 
@@ -303,7 +304,7 @@ Sample statement:
    INSERT INTO test_tbl1 VALUES(5,'test5');
    ```
 
-3. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971197) and [Download tools](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971198).
+3. Prepare the running environment for OBLOADER. For more information, see [Prepare the environment](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860103) and [Download tools](https://en.oceanbase.com/docs/community-obloader-obdumper-en-10000000000860104).
 
 3. Import table data.
 
