--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
@@ -11,9 +11,9 @@ In MySQL mode, a user is identified by a username and a host. Execute the follow
 Example:
 
 ```sql
-create user 'u1'@'%' identified by '***1***';
-create user 'u1'@'10.xxx.xxx.1' identified by '***1***';
-create user 'u1'@'10.xxx.xxx.2' identified by '***1***';
+create user 'u1'@'%' identified by '*******';
+create user 'u1'@'10.xxx.xxx.1' identified by '*******';
+create user 'u1'@'10.xxx.xxx.2' identified by '*******';
 ```
 
 Notes:
