--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -28,7 +28,7 @@ This section describes how to set the following password complexity rules: A pas
 1. Log on to a MySQL tenant of a cluster as the root user. 
 
    ```shell
-   obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
+   obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p*******
    ```
 
 2. Specify system variables to set password complexity. 
