--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/1.identification-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/1.identification-of-oracle-mode.md
@@ -16,13 +16,13 @@ In Oracle mode, users in a tenant must have unique usernames. However, users in 
 1. Log on to an Oracle tenant of a cluster as the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
    ```
 
 2. Execute the following statement to create a user named `u1`. 
 
    ```shell
-   obclient> CREATE USER u1 IDENTIFIED BY **1***;
+   obclient> CREATE USER u1 IDENTIFIED BY ******;
    Query OK, 0 rows affected (0.064 sec)
    ```
 
@@ -36,7 +36,7 @@ In Oracle mode, users in a tenant must have unique usernames. However, users in 
 4. Log on to the cluster as user `u1`. 
 
    ```shell
-   $obclient -h10.xxx.xxx.1 -P2881 -uu1@oracle001 -p**1*** -A
+   $obclient -h10.xxx.xxx.1 -P2881 -uu1@oracle001 -p****** -A
    Welcome to the OceanBase.  Commands end with ; or \g.
    Your OceanBase connection id is 3221707914
    Server version: OceanBase 4.0.0.0 (r101000022022120716-0d7927892ad6d830e28437af099f018b0ad9a322) (Built Dec  7 2022 16:22:15)
