--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
@@ -35,7 +35,7 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
 1. Log on to an Oracle tenant of a cluster as the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
    ```
 
 2. Write the function corresponding to the `PASSWORD_VERIFY_FUNCTION` parameter and grant privileges. 
@@ -300,7 +300,7 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
 1. Log on to an Oracle tenant of a cluster as the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
    ```
 
 2. Attempt to create a user named `sectest1` separately with a valid password and an invalid password. 
@@ -325,7 +325,7 @@ Perform the following steps to view the complexity rules:
 1. Log on to an Oracle tenant of a cluster as the root user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
    ```
 
 2. Query the `DBA_SOURCE` view to find the corresponding function. 
