--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -105,7 +105,7 @@ The administrator can create a profile and apply it to a user. Then, logon failu
 1. Log on to an Oracle tenant of a cluster as the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
+   obclient -usys@oracle -h127.1 -P2881 -  P******* 
    ```
 
 2. Create a profile and configure a handling strategy regarding consecutive logon failures. 
