--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -11,14 +11,14 @@ Privilege delegation solves the problem due to the centralization of privileges 
    2. Create a user A and grant privileges without using the `WITH GRANT OPTION` clause. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '******';
       Query OK, 0 rows affected (0.034 sec)
       ```
 
    3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. An error is returned. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
       ERROR 1227 (42501): Access denied; you need (at least one of) the GRANT privilege(s) for this operation
       ```
 
@@ -39,6 +39,6 @@ Privilege delegation solves the problem due to the centralization of privileges 
    3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. A success message is returned. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
       Query OK, 0 rows affected (0.058 sec)
       ```
