--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
@@ -7,9 +7,9 @@ Privilege delegation solves the problem due to the centralization of privileges 
 1. Log on to an Oracle tenant of a cluster as the SYS user. Create users A, B, and C, and grant all the users the `CREATE SESSION` privilege and user A the `GRANT ANY PRIVILEGE` privilege. 
 
    ```shell
-   obclient > CREATE USER A IDENTIFIED BY **1***;
-   obclient > CREATE USER B IDENTIFIED BY **1***;
-   obclient > CREATE USER C IDENTIFIED BY **1***;
+   obclient > CREATE USER A IDENTIFIED BY ******;
+   obclient > CREATE USER B IDENTIFIED BY ******;
+   obclient > CREATE USER C IDENTIFIED BY ******;
    obclient > GRANT CREATE SESSION TO A;
    obclient > GRANT CREATE SESSION TO B;
    obclient > GRANT CREATE SESSION TO C;
