--- a/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
@@ -21,7 +21,7 @@ You can specify the values in the following formats:
 1. Log on to the sys tenant of a cluster as the root user. 
 
    ```shell
-   obclient -uroot@sys -P2881 -h10.xxx.xxx.1 -p***1***
+   obclient -uroot@sys -P2881 -h10.xxx.xxx.1 -p*******
    ```
 
 2. Execute the following statement to view the tenant whitelist: 
