--- a/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -104,7 +104,7 @@ The label security feature is supported only in Oracle mode.
    1. Log on to the `Oracle` tenant as the `SYS` user, create a user named `user1`, and then grant all privileges of the SYS user, except the `GRANT OPTION` privilege, to `user1`. 
 
       ```shell
-      obclient> CREATE USER user1 IDENTIFIED BY ***1***;
+      obclient> CREATE USER user1 IDENTIFIED BY *******;
       Query OK, 0 rows affected
 
       obclient> GRANT ALL PRIVILEGES TO user1;
