--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md
@@ -7,7 +7,7 @@ A major compaction compacts all dynamic and static data, which is a time-consumi
 
 Major compactions can be classified into the following types based on the data volume:
 
-* Full compaction: All the static data is read and compacted with the dynamic data to generate the final static data. A full major compaction takes a long time and consumes a large amount of I/O and CPU resources.
+* Full compaction: All the static data is read and compacted with the dynamic data to generate the final static data. A full compaction takes a long time and consumes a large amount of I/O and CPU resources.
 
 * Incremental compaction: Only macroblocks modified since the last compaction are compacted. Macroblocks with no changes are reused.
 
