--- a/en-US/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/12.set-decryption.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/12.set-decryption.md
@@ -23,11 +23,11 @@ SET DECRYPTION IDENTIFIED BY  ('password'[, 'password' ...]);
 * Set the same password for full backups and incremental backups.
 
    ```sql
-   obclient> SET DECRYPTION IDENTIFIED BY '***1***';
+   obclient> SET DECRYPTION IDENTIFIED BY '*******';
    ```
 
 * Set different passwords for full backups and incremental backups. Enter the password for full backups in front of the password for incremental backups.
 
    ```sql
-   obclient> SET DECRYPTION IDENTIFIED BY '***1***','***2***';
+   obclient> SET DECRYPTION IDENTIFIED BY '*******','***2***';
    ```
