--- a/en-US/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/13.set-encryption.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/13.set-encryption.md
@@ -23,5 +23,5 @@ SET ENCRYPTION ON IDENTIFIED BY 'password' ONLY;
 Set a backup password.
 
 ```sql
-obclient> SET ENCRYPTION ON IDENTIFIED BY  '***1***' ONLY;
+obclient> SET ENCRYPTION ON IDENTIFIED BY  '*******' ONLY;
 ```
