--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md
@@ -38,10 +38,10 @@ You can use this statement to perform the following operations:
 
 ## Examples
 
-* Change the password of user `sqluser01` to `**1***`.
+* Change the password of user `sqluser01` to `******`.
 
    ```sql
-   obclient> ALTER USER 'sqluser01' IDENTIFIED BY '**1***';
+   obclient> ALTER USER 'sqluser01' IDENTIFIED BY '******';
    ```
 
 * Lock user `obsqluser01`.
