--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/85.set-password-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/85.set-password-of-mysql-mode.md
@@ -26,7 +26,7 @@ PASSWORD('authstring')
 * Change the password of the current user.
 
    ```sql
-   obclient> SET PASSWORD = PASSWORD('**1***');
+   obclient> SET PASSWORD = PASSWORD('******');
    Query OK, 0 rows affected
    ```
 
