--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md
@@ -60,7 +60,7 @@ tls_option:
 * Change the password of `user1`.
 
    ```sql
-   obclient> ALTER USER user1 IDENTIFIED BY **1***;
+   obclient> ALTER USER user1 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
 
