--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/17.create-keystore-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/17.create-keystore-of-oracle-mode.md
@@ -22,5 +22,5 @@ ADMINISTER KEY MANAGEMENT CREATE KEYSTORE [keystore_name] IDENTIFIED BY [passwor
 Create a Keystore named `keystore1`.
 
 ```sql
-obclient> ADMINISTER KEY MANAGEMENT CREATE KEYSTORE keystore1 IDENTIFIED BY **1***;
+obclient> ADMINISTER KEY MANAGEMENT CREATE KEYSTORE keystore1 IDENTIFIED BY ******;
 ```
