--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/2.alter-keystore-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/2.alter-keystore-of-oracle-mode.md
@@ -27,11 +27,11 @@ ADMINISTER KEY MANAGEMENT SET KEY IDENTIFIED BY [password]
 * Open a Keystore. You can access the encrypted table and set the master key only when the Keystore is in the `open` state.
 
    ```sql
-   obclient> ADMINISTER KEY MANAGEMENT SET KEYSTORE OPEN IDENTIFIED BY **1***;
+   obclient> ADMINISTER KEY MANAGEMENT SET KEYSTORE OPEN IDENTIFIED BY ******;
    ```
 
 * Update the master key stored in the Keystore.
 
    ```sql
-   obclient> ADMINISTER KEY MANAGEMENT SET KEY IDENTIFIED BY **1***;
+   obclient> ADMINISTER KEY MANAGEMENT SET KEY IDENTIFIED BY ******;
    ```
