--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/21.create-role-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/21.create-role-of-oracle-mode.md
@@ -32,9 +32,9 @@ CREATE ROLE role_name
    Query OK, 0 rows affected
    ```
 
-* Create a role named `role2` and specify the password `**1***` for it.
+* Create a role named `role2` and specify the password `******` for it.
 
    ```sql
-   obclient> CREATE ROLE role2 IDENTIFIED BY **1***;
+   obclient> CREATE ROLE role2 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
