--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/5.alter-role-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/5.alter-role-of-oracle-mode.md
@@ -28,13 +28,13 @@ ALTER ROLE role_name
 
 ## Examples
 
-* Create a role named `role1` and specify the password `**1***` for verification when this role is to be enabled.
+* Create a role named `role1` and specify the password `******` for verification when this role is to be enabled.
 
    ```sql
    obclient> CREATE ROLE role1;
    Query OK, 0 rows affected
 
-   obclient> ALTER ROLE role1 IDENTIFIED BY **1***;
+   obclient> ALTER ROLE role1 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
 
