--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/33.set-password-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/33.set-password-of-oracle-mode.md
@@ -25,9 +25,9 @@ password:
 
 ## Examples
 
-Change the password of `user1` to `**1***`.
+Change the password of `user1` to `******`.
 
 ```sql
-obclient> SET PASSWORD FOR user1 = PASSWORD(**1***);
+obclient> SET PASSWORD FOR user1 = PASSWORD(******);
 Query OK, 0 rows affected
 ```
