--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/34.set-role-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/34.set-role-of-oracle-mode.md
@@ -25,10 +25,10 @@ SET ROLE
 
 ## Examples
 
-* Enable `role1` identified by the password `**1***` for the current session.
+* Enable `role1` identified by the password `******` for the current session.
 
    ```sql
-   obclient> SET ROLE role1 IDENTIFIED BY **1***;
+   obclient> SET ROLE role1 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
 
