--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
@@ -45,6 +45,7 @@ The following sections describe the general conventions and precautions for nami
    | Index name | 64 bytes  |
    | View name | 64 bytes  |
    | Alias | 255 bytes  |
+   | Partition name | 64 bytes |
 
    <!--| Table group name     | 128 bytes   |-->
 
@@ -61,6 +62,7 @@ The following sections describe the general conventions and precautions for nami
    | View name | 128 bytes  |
    | Alias | 255 bytes  |
    | Object name | 128 bytes  |
+   | Partition name | 64 bytes |
 
 ## Maximum number of ODP connections
 
