--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/1.requirements-for-software-and-hardware.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/1.requirements-for-software-and-hardware.md
@@ -18,7 +18,7 @@ The following table provides links for downloading the installation packages tha
 
 ## Hardware resources
 
-OceanBase Database V4.0 has been systematically tested and verified. We recommend that you deploy it in an environment that meets the following software and hardware requirements:
+OceanBase Database has been systematically tested and verified. We recommend that you deploy it in an environment that meets the following software and hardware requirements:
 
 | Item | Description |
 |----------|-----------------------------------------------------------------------------------------------------------------------|
