--- a/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -13,7 +13,7 @@ The `INSERT INTO SELECT` statement uses the `append` keyword and the `enable_par
 ## Syntax
 
 ```sql
-INSERT INTO /*+ append enable_parallel_dml parallel(N) */ table_name select_sentence
+INSERT /*+ append enable_parallel_dml parallel(N) */ INTO  table_name select_sentence
 ```
 
 For more information about the syntax of the `INSERT INTO` statement, see [INSERT (MySQL mode)](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) and [INSERT (Oracle mode)](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md).
@@ -42,7 +42,7 @@ obclient [test]> SELECT * FROM tbl2;
 +------+------+------+
 3 rows in set
 
-obclient [test]> INSERT INTO /*+ append enable_parallel_dml parallel(16) */ tbl1 SELECT t2.col1,t2.col3 FROM tbl2 t2;
+obclient [test]> INSERT /*+ append enable_parallel_dml parallel(16) */INTO tbl1 SELECT t2.col1,t2.col3 FROM tbl2 t2;
 Query OK, 3 rows affected
  Records: 3  Duplicates: 0  Warnings: 0
 
@@ -60,7 +60,7 @@ obclient [test]> SELECT * FROM tbl1;
 In the note of the return result of the `EXPLAIN EXTENDED` statement, check whether the data is written by using bypass import.
 
 ```shell
-obclient [test]> EXPLAIN EXTENDED INSERT INTO /*+ append enable_parallel_dml parallel(16) */ tbl1 SELECT t2.col1,t2.col3 FROM tbl2 t2;
+obclient [test]> EXPLAIN EXTENDED INSERT /*+ append enable_parallel_dml parallel(16) */INTO tbl1 SELECT t2.col1,t2.col3 FROM tbl2 t2;
 ```
 
 ## More information
