--- a/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
+++ b/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
@@ -6,9 +6,9 @@ This topic describes how to use OBLOADER & OBDUMPER to migrate data from a MySQL
 
 OceanBase Database provides the data export tool OBDUMPER and the data import tool OBLOADER. 
 
-* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [User Guide (OBDUMPER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860074). 
+* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [OBDUMPER overview](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860074). 
 
-* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [User Guide (OBLOADER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860068). 
+* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [OBLOADER overview](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860068). 
 
 ## Procedure
 
@@ -223,7 +223,7 @@ Scenario: Import, to the `obloader_user01` schema of the `oracle001` tenant in t
    </li>
    <li>Remove the default collation and character set parameters <code>default charset=utf8mb4</code> and <code>default collate=utf8mb4_general_ci</code>. </li>
    </ul>
-   <!--<p>For more information about the data types in Oracle mode, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000886657">Overview of built-in data types</a>. </p>-->
+   <!-- <p>For more information about the data types in Oracle mode, see <a herf="/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/1.sql-overview-of-oracle-mode.md">verview of built-in data types</a>.</p> -->
 </main>
 
 * Sample statement: 
