--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md
@@ -49,7 +49,7 @@ tls_option:
 1. Create a user named `user1` and set its password to \*\*1\*\*\*.
 
    ```sql
-   obclient> CREATE USER user1 IDENTIFIED BY **1***;
+   obclient> CREATE USER user1 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
 
